--- a/main.css
+++ b/main.css
@@ -13,6 +13,7 @@ h1 {
     color: navy;
     padding: 0;
     margin: 1em 0 .5em .5em;
+    text-align: center;
 }
 p {
     margin: .5em 0;
@@ -39,4 +40,7 @@ br {
 .textbox {
     width: 15em;
     margin-bottom: .2em;
+}
+legend {
+    text-align: center;
 }
