--- a/main.css
+++ b/main.css
@@ -14,6 +14,17 @@ h1 {
     padding: 0;
     margin: 1em 0 .5em .5em;
     text-align: center;
+    font-size: 2.5em;
+}
+h2 {
+    font-size: 1.2em;
+    text-align: center;
+}
+h3 {
+    text-align: left;
+}
+h4 {
+    display: none;
 }
 p {
     margin: .5em 0;
@@ -43,4 +54,6 @@ br {
 }
 legend {
     text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
 }
